# demo

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build-mac.yml  build-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scap-fork/: Cargo.toml
src-tauri/scap-fork/src/capturer/engine/win/: mod.rs
src-tauri/scap-fork/src/targets/win/: mod.rs
src-tauri/src/: lib.rs  session.rs
