[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
scap = "0.1.0-beta.1"
openh264 = "0.6"
enigo = "0.2"
socket2 = { version = "0.5.10", features = ["all"] }
jpeg-encoder = "0.7.0"
base64 = "0.22"
iroh-net = "0.28.2"
